<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:background="@drawable/style_item_repository">

    <TextView
        android:id="@+id/repoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repositoryName"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoName"
        android:visibility="gone"
        app:srcCompat="@drawable/git_hub_logo"/>

    <ImageView
        android:id="@+id/photoAuthor"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoName"
        app:srcCompat="@drawable/git_hub_logo" />

    <TextView
        android:id="@+id/authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/authorsRepository"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/photoAuthor"
        app:layout_constraintStart_toEndOf="@id/photoAuthor"
        app:layout_constraintTop_toTopOf="@+id/photoAuthor" />

    <TextView
        android:id="@+id/repoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repositoryDescription"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorName" />

    <ImageView
        android:id="@+id/forks"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoDescription"
        app:srcCompat="@drawable/forks" />

    <TextView
        android:id="@+id/forksCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/forks"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/forks"
        app:layout_constraintStart_toEndOf="@+id/forks"
        app:layout_constraintTop_toTopOf="@+id/forks" />

    <ImageView
        android:id="@+id/watches"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forks"
        app:srcCompat="@drawable/open_eye" />

    <TextView
        android:id="@+id/watchesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/watches"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/watches"
        app:layout_constraintStart_toEndOf="@+id/watches"
        app:layout_constraintTop_toTopOf="@+id/watches" />

</androidx.constraintlayout.widget.ConstraintLayout>